# foundry

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/scoop/: foundry.json.tmpl
.github/workflows/: ci-gate.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-03-21-foundry-cli.md
docs/superpowers/specs/: 2026-03-21-foundry-cli-design.md
src/: agent_hooks.rs  cli.rs  git.rs  github.rs  history.rs  hook_script.js  lib.rs  main.rs  registry.rs  state.rs
src/config/: agents.rs  global.rs  mod.rs  project.rs  template.rs  types.rs  validation.rs
src/forge/: github.rs  mod.rs
src/terminal/: applescript.rs  bare.rs  ghostty.rs  iterm2.rs  mod.rs  tmux.rs  wezterm.rs  windows_terminal.rs  zellij.rs
src/workflow/: checks.rs  cleanup.rs  diff.rs  discard.rs  edit.rs  finish.rs  mod.rs  open.rs  pr.rs  restore.rs  start.rs  status.rs
tests/: cli_test.rs  config_test.rs  forge_test.rs  git_test.rs  integration_test.rs  registry_test.rs  state_test.rs  template_test.rs  terminal_test.rs
