[package]
name = "foundry"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "6"
which = "7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
