[package]
name = "foundry"
version = "0.1.0"
edition = "2024"
description = "CLI for managing AI agent workspaces using git worktrees and terminal automation"
repository = "https://github.com/xiphux/foundry"
homepage = "https://github.com/xiphux/foundry"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "6"
which = "7"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
